# pet-api

./: .gitignore  pyproject.toml
src/: database.py  main.py
src/api/: __init__.py  books.py
src/models/: books.py
src/schemas/: books.py
src/services/: book_service.py
