[project]
name = "pet-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Dan Per",email = "bebrich66@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio (>=4.11.0,<5.0.0)",
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry.scripts]
pet-api = "src.main:main"

[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
